--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 header {
     background-color: #44191b; /* Dark Burgundy */
-    color: #ffffff;
+    color: #fff;
     padding: 1rem 0;
     text-align: center;
     position: sticky;
@@ -38,7 +38,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #ffffff;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -51,7 +51,7 @@ nav ul li a:hover {
     background-size: cover;
     background-position: center;
     padding: 4rem 0;
-    color: #ffffff;
+    color: #fff;
     text-align: center;
 }
 
@@ -61,6 +61,7 @@ section {
     background-color: #433d5f; /* Dark Blue-Purple */
     border-radius: 8px;
     width: 100%;
+    color: #c1bec8; /* Light Gray */
 }
 
 .gallery-container {
@@ -89,9 +90,17 @@ form label, form input, form textarea, form button {
     margin: 0.5rem 0;
 }
 
+form input, form textarea {
+    background-color: #9a94a6; /* Light Grayish Purple */
+    color: #000;
+    border: 1px solid #6e3737; /* Dark Reddish Brown */
+    border-radius: 4px;
+    padding: 0.5rem;
+}
+
 form button {
     background-color: #44191b; /* Dark Burgundy */
-    color: #ffffff;
+    color: #fff;
     border: none;
     padding: 0.5rem;
     border-radius: 4px;
@@ -105,7 +114,7 @@ footer {
     text-align: center;
     padding: 1rem 0;
     background-color: #44191b; /* Dark Burgundy */
-    color: #ffffff;
+    color: #fff;
 }
 
 iframe {
