--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/file-JNkOKw7qAcLopGe58aPJgdy.jpg'); /* Add your background image URL here */
+    background-image: url('https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/file-JNkOKw7qAcLopGe58aPJjqdy.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
