--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,4 @@ iframe {
     }
 
     .gallery-item img {
-        width: 100%; /* Ensure images fit screen width on small devices */
-    }
-}
+        width: 100%; /* Ensure images fit screen width on small dev
