--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/302092764_10160647026044684_1325019668249462331_n_1080x%20.webp');
+    background-image: url('https://raw.githubusercontent.com/Danielcxurena/Jose-s-RC-Cars/main/file-JNkOKw7qAcLopGe58aPJjqdy_optimized.webp');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
